--- a/fs/package.json
+++ b/fs/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "client",
+  "name": "gg",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "fs.js",
   "scripts": {
-    "start": "http-server",
+    "start": "nodemon fs.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.3.1",
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
