--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "levenshtein-edit-distance": "^2.0.3"
+    "levenshtein-edit-distance": "^2.0.3",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
