--- a/fs/package.json
+++ b/fs/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "mongodb": "^3.1.13",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "readline": "^1.3.0"
   },
   "devDependencies": {
